--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ textarea {
   resize: none;
 }
 
-.site-nav, .auth-nav {
+.site-nav, .auth-nav, .advant-comp {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -419,10 +419,171 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 400px;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero.jpg");
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
   background-position: center;
   background-size: cover;
   background-color: chocolate;
+}
+
+@media screen and (min-width: 1200px) {
+  .main-hero {
+    height: 600px;
+  }
+}
+
+.main-hero .hero-item {
+  width: 360px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .main-hero .hero-item {
+    width: 694px;
+  }
+}
+
+.main-hero .hero-item .hero-title {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.61;
+  margin-top: 0;
+  margin-bottom: 30px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .main-hero .hero-item .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+    margin-bottom: 20px;
+  }
+}
+
+.main-hero .hero-item .service {
+  font-family: Roboto;
+  font-weight: bold;
+  color: white;
+  background-color: #2196F3;
+  letter-spacing: 0.06em;
+  font-size: 16px;
+  line-height: 1.87;
+  min-width: 200px;
+  height: 50px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 1199px) {
+  .about-us {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-us {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.advant-comp {
+  display: inline-block;
+}
+
+@media screen and (min-width: 768px) {
+  .advant-comp {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advant-comp {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .advant-comp .comp-item:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .comp-item {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .comp-item {
+    width: 270px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .comp-item:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+
+.icon-container {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 450px;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .icon-container {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .icon-container {
+    width: 270px;
+  }
+}
+
+.section-title {
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #212121;
+  margin-bottom: 10px;
+  margin-top: 0;
+  padding: 0;
+}
+
+.text {
+  font-style: normal;
+  font-weight: normal;
+  color: var(--primari-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+  margin: 0;
 }
 /*# sourceMappingURL=main.css.map */
