--- a/sass/components/mobile/_hero.scss
+++ b/sass/components/mobile/_hero.scss
@@ -2,9 +2,7 @@
   @extend %flex;
   justify-content: center;
   align-items: center;
-  
-  
-
+  height: 400px;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -13,8 +11,54 @@
     url("../images/hero.jpg");
   background-position: center;
   background-size: cover;
-  
-  
-  
+  background-color: chocolate;
 
-  background-color: chocolate;}
+  @media screen and (min-width:1200px){
+    height: 600px;
+  }
+
+  .hero-item{
+    width: 360px;
+    text-align: center;
+
+    @media screen and (min-width:1200px){
+      width: 694px;
+    }
+
+    .hero-title {
+      color: #ffffff;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 1.61;
+      margin-top: 0;
+      margin-bottom: 30px;
+    
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+
+      @media screen and (min-width:1200px){
+        font-size: 44px;
+        line-height: 1.36;
+        margin-bottom: 20px;
+      }
+    }
+
+    .service{
+      font-family: Roboto;
+      font-weight: bold;
+      color: white;
+      background-color: $hover-color;
+      letter-spacing: 0.06em;
+
+      font-size: 16px;
+      line-height: 1.87;
+      min-width: 200px;
+
+      height: 50px;
+      border: 1px solid transparent;
+      border-radius: 4px;
+
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
+  }
+}
