--- a/sass/components/mobile/_index-mobile.scss
+++ b/sass/components/mobile/_index-mobile.scss
@@ -3,3 +3,6 @@
 @import "./auth-nav";
 @import "./hero";
 @import "./about-us";
+@import "./profesion";
+@import "./comand";
+@import "./regular-customers";
