--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ textarea {
   resize: none;
 }
 
-.site-nav, .auth-nav, .advant-comp {
+.site-nav, .auth-nav, .advant-comp, .work-list, .comand .team, .comand .team .photo .comand-link, .client .client-container {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -18,7 +18,7 @@ textarea {
   height: auto;
 }
 
-.main-hero {
+.main-hero, .work-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -88,6 +88,9 @@ textarea {
 }
 
 .menu-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #ffffff;
 }
 
@@ -206,6 +209,19 @@ textarea {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav .link-nav {
+    padding-bottom: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav .link-nav {
+    padding-top: 32px;
+    padding-bottom: 29px;
+  }
+}
+
 .site-nav .link-nav::after {
   display: block;
   position: absolute;
@@ -256,6 +272,8 @@ textarea {
 }
 
 .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
   font-family: Raleway;
   color: #2196F3;
   font-weight: bold;
@@ -270,7 +288,7 @@ textarea {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .logo {
     padding-top: 26px;
     padding-bottom: 26px;
@@ -419,17 +437,48 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 400px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
+  height: 600px;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/hero.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero.jpg");
   background-position: center;
   background-size: cover;
   background-color: chocolate;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .main-hero {
-    height: 600px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/heroDesc2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/heroDesc2x.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .main-hero {
+    height: 400px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/HeaderMobilimg.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/HeaderMobilimg.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (max-width: 767px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (max-width: 767px) and (min-resolution: 2dppx) {
+  .main-hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/Header img@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/Header img@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .main-hero {
+    height: 400px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/HeaderTablimg.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/HeaderTablimg.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
+  .main-hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/Header tablet img@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/Header tablet img@2x.jpg");
   }
 }
 
@@ -494,16 +543,16 @@ textarea {
 }
 
 .advant-comp {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .advant-comp {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    margin: -15px;
   }
 }
 
@@ -515,60 +564,49 @@ textarea {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .advant-comp .comp-item:nth-child(-n + 3) {
-    margin-bottom: 30px;
-  }
-}
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .comp-item {
-    width: 354px;
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .comp-item {
-    width: 270px;
+    -ms-flex-preferred-size: calc((100% - 30px * 3) / 4);
+        flex-basis: calc((100% - 30px * 3) / 4);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .comp-item:nth-child(odd) {
-    margin-right: 30px;
+  .comp-item {
+    margin: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .comp-item:nth-child(-n + 3) {
+    margin-bottom: 30px;
   }
 }
 
 .icon-container {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
-}
-
-@media screen and (min-width: 768px) {
-  .icon-container {
-    width: 354px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .icon-container {
-    width: 270px;
-  }
+  margin-bottom: 30px;
 }
 
 .section-title {
-  text-align: center;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -578,6 +616,12 @@ textarea {
   padding: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .section-title {
+    text-align: center;
+  }
+}
+
 .text {
   font-style: normal;
   font-weight: normal;
@@ -585,5 +629,269 @@ textarea {
   font-size: 14px;
   line-height: 1.71;
   margin: 0;
+}
+
+.profesion {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.profesion .function-title {
+  color: #212121;
+  text-align: center;
+  font-weight: bold;
+  font-size: 36px;
+  margin-bottom: 50px;
+  margin-top: 0;
+  line-height: 1.16;
+}
+
+@media screen and (max-width: 1199px) {
+  .profesion {
+    display: none;
+  }
+}
+
+.work-list .work-item {
+  position: relative;
+}
+
+.work-list .work-item .work-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+}
+
+.work-content {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.work-list .work-item + .work-item {
+  margin-left: 30px;
+}
+
+.comand {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #f5f4fa;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .comand {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+.comand .comand-title {
+  text-align: center;
+  color: #212121;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  margin-bottom: 50px;
+  margin-top: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .comand .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .comand .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.comand .team .photo {
+  height: 622px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .comand .team .photo:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .comand .team .photo {
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    height: 536px;
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .comand .team .photo {
+    width: calc((100% - 30px * 3) / 4);
+    height: 428px;
+  }
+}
+
+.comand .team .photo .comand-initials {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+
+.comand .team .photo .icon-item {
+  text-align: center;
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.18;
+  margin: 0;
+}
+
+.comand .team .photo .social-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 44px;
+  height: 44px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comand .team .photo .social-link:hover .icon-about_as {
+  fill: #ffffff;
+}
+
+.comand .team .photo .social-link:hover {
+  background-color: #2196F3;
+}
+
+.comand .team .photo .comand-link {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 206px;
+  margin-top: 16px;
+}
+
+.comand .team .photo .icon-about_as {
+  fill: #afb1b8;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.client {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.client .comand-title {
+  text-align: center;
+  color: #212121;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  margin-bottom: 50px;
+  margin-top: 0;
+}
+
+.client .client-container {
+  margin: -15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.client .client-container .client-container_item {
+  margin: 15px;
+}
+
+.client .client-container .client-container_item .client-link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 210px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  -webkit-transition-property: border-color;
+  transition-property: border-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.client .client-container .client-container_item .client-link .client-svg {
+  fill: #afb1b8;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
