--- a/sass/components/mobile/_about-us.scss
+++ b/sass/components/mobile/_about-us.scss
@@ -1,3 +1,5 @@
+// паддинги для секции "наши преимущества"
+
 .about-us{
     
     @media screen and (max-width:1199px){
@@ -11,21 +13,49 @@
     }
 }
 
+// список "наших преимуществ"
+
 .advant-comp {
-  
-  display: inline-block;
   @extend %list;
-  @media screen and (min-width:768px){
-    display: flex;
-    flex-wrap: wrap;
+
+  display: flex;
+  flex-wrap: wrap;
+  
+  @media screen and (min-width:768px) and (max-width:1199px){
+    
+    margin: -15px;
   }
 
   @media screen and (min-width:1200px){
+
     justify-content: space-between;
-  
   }
 
-  .comp-item:nth-child(-n + 3){
+}
+
+// элементы списка
+
+  .comp-item{
+    
+    @media screen and (min-width:768px) and (max-width:1199px){
+      flex-basis:calc(50% - 30px);
+    
+  }
+
+    @media screen and (min-width:1200px){
+      flex-basis:calc((100% - 30px * 3) / 4);
+  }
+
+  & {
+    
+    @media screen and (min-width:768px) and (max-width:1199px){
+    margin:15px ;
+  }
+}
+
+   
+
+  &:nth-child(-n + 3){
 
     @media screen and (max-width:767px){
       
@@ -33,58 +63,27 @@
     }
     
   }
-  
-}
-
-  .comp-item{
-    
-    @media screen and (min-width:768px) and (max-width:1199px){
-      width: 354px;
-    
-  }
-
-    @media screen and (min-width:1200px){
-    width: 270px;
-  }
-
-  
 
 }
 
-.comp-item:nth-child(odd) {
-  @media screen and (min-width:768px) and (max-width:1199px){
-    margin-right: 30px;
-  }
-
-  
-}
-
-
-
+// контейнер с иконкой списка "наши преимущества"
 
 .icon-container {
 
-  display: inline-flex;
+  display:flex;
   justify-content: center;
   align-items: center;
-  width: 450px;
+  
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
+  margin-bottom: 30px;
 
-  @media screen and (min-width:768px){
-   width: 354px;
  }
-
- @media screen and (min-width:1200px){
-  width: 270px;
-}
-
-}
 
   .section-title {
 
-  text-align: center;
+  
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -92,6 +91,10 @@
   margin-bottom: 10px;
   margin-top: 0;
   padding: 0;
+
+  @media screen and (max-width:767px){
+    text-align: center;
+  }
 } 
 
 .text {
