--- a/sass/components/mobile/_comand.scss
+++ b/sass/components/mobile/_comand.scss
@@ -10,6 +10,11 @@
       padding-bottom: 60px;
     }
 
+    @media screen and (min-width:1200px){
+      padding-top: 94px;
+      padding-bottom: 90px;
+    }
+
 
     .comand-title {
       text-align: center;
