--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     width: 570px;
 
+    
     .footer-form {
 
         font-family: Roboto;
@@ -20,6 +21,7 @@
         .footer-input {
 
             width: 358px;
+            margin-bottom: 20px;
             padding: 13px 16px;
             color:#fff;
             background-color: #2F303A;
@@ -30,8 +32,10 @@
             border-radius: 4px;
             transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
           }
+  
 
           .footer-button{
+            
             @extend %button;
             display: inline-flex;
             align-items: center;
@@ -48,8 +52,8 @@
                 background-image: url(/images/send.svg);
               }
             
-          }  
-
+          }
+          
           
   }
 
