--- a/sass/components/mobile/_index-mobile.scss
+++ b/sass/components/mobile/_index-mobile.scss
@@ -8,3 +8,6 @@
 @import "./regular-customers";
 @import "./footer";
 @import "./footer-form";
+@import "./backdrop";
+@import "./porfolio-button";
+@import "./portfolio-projeckt";
