--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ textarea {
   resize: none;
 }
 
-.site-nav, .auth-nav, .advant-comp, .work-list, .comand .team, .comand .team .photo .comand-link, .client .client-container, .footer-adres_container {
+.site-nav, .auth-nav, .advant-comp, .work-list, .comand .team, .comand .team .photo .comand-link, .client .client-container, .footer-adres_container, .button-container .button-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -24,7 +24,7 @@ textarea {
   display: flex;
 }
 
-.footer-form_container .footer-button {
+.footer-form_container .footer-button, .modal .form .service {
   font-family: Roboto;
   font-weight: bold;
   color: white;
@@ -1232,5 +1232,471 @@ textarea {
   margin-left: 12px;
   background-repeat: no-repeat;
   background-image: url(/images/send.svg);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding-top: 60px;
+  padding-bottom: 54px;
+  padding-left: 15px;
+  padding-right: 15px;
+  overflow-y: scroll;
+}
+
+@media screen and (min-width: 768px) {
+  .backdrop {
+    padding-top: 208px;
+    padding-bottom: 207px;
+    padding-left: 159px;
+    padding-right: 159px;
+  }
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  -webkit-transform: scale(0.5);
+          transform: scale(0.5);
+  opacity: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop.is-hidden .modal {
+    -webkit-transform: translate(-50%, -50%) scale(0.5);
+            transform: translate(-50%, -50%) scale(0.5);
+  }
+}
+
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  padding: 40px;
+  background: #ffffff;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 1;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .modal {
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    min-width: 528px;
+    min-height: 581px;
+    top: 50%;
+    left: 50%;
+  }
+}
+
+.modal .close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+  margin-top: 8px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.modal .close .close-icon {
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal .close .close-icon:hover {
+  fill: #2196F3;
+}
+
+.modal .form {
+  width: 100%;
+}
+
+.modal .form .form-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin: 0;
+  margin-bottom: 12px;
+  color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal .form .form-title {
+    line-height: 1.15;
+  }
+}
+
+.modal .form .label {
+  display: block;
+  margin-bottom: 4px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.modal .form .form-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.modal .form .form-label .form-input {
+  width: 100%;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: 0;
+  border-radius: 4px;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal .form .form-label .form-input:focus {
+  border-color: #2196F3;
+}
+
+.modal .form .form-label .form-input:focus + .form-icon {
+  fill: #2196F3;
+}
+
+.modal .form .form-label .form-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  fill: #212121;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-size: auto;
+}
+
+.modal .form .checkbox-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.modal .form .checkbox-container .label-checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal .form .checkbox-container .label-checkbox {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
+.modal .form .checkbox-container .label-checkbox .checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.modal .form .checkbox-container .label-checkbox .checkbox:checked + .checkbox-icon {
+  background: #2196F3;
+  border: 0;
+  border-color: #2196F3;
+}
+
+.modal .form .checkbox-container .label-checkbox .checkbox-icon {
+  border: 2px solid #212121;
+  fill: #ffffff;
+  border-radius: 4px;
+}
+
+.modal .form .checkbox-container .label-checkbox .form-item {
+  margin-left: 7px;
+}
+
+.modal .form .checkbox-container .label-checkbox .form-item .link-checkbox {
+  color: #2196F3;
+}
+
+.modal .form .service.form-botton {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .button-container {
+    width: 480px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .button-container {
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button-container {
+    padding-top: 94px;
+    padding-bottom: 50px;
+  }
+}
+
+.button-container .button-list .portfolio-button {
+  border-radius: 4px;
+  border: 1px solid transparent;
+  display: inline-block;
+}
+
+@media screen and (max-width: 767px) {
+  .button-container .button-list .portfolio-button:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
+.button-container .button-list .portfolio-button .item {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: #212121;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  padding: 6px 22px;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-container .button-list .portfolio-button .item:hover {
+  color: #ffffff;
+  background-color: #2196F3;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.projeckt {
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .projeckt {
+    padding-top: 14px;
+  }
+}
+
+.style-chyld {
+  margin: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .style-chyld {
+    width: calc(50% - 30px);
+  }
+}
+
+.portfolio-style {
+  padding: 0;
+  margin: -15px;
+  list-style: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.style-chyld {
+  position: relative;
+  border: 1px solid #eeeeee;
+}
+
+.style-chyld:hover {
+  border: 1px solid #eeeeee;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.style-chyld:hover .title-menu_function {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.title-menu {
+  width: 100%;
+  height: 294px;
+  position: absolute;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .title-menu {
+    height: 230px;
+  }
+}
+
+.title-menu_function {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 77px;
+  padding-bottom: 77px;
+  background-color: rgba(33, 150, 243, 0.9);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767) {
+  .title-menu_function {
+    padding-top: 77px;
+    padding-bottom: 77px;
+  }
+}
+
+@media screen and (min-width: 768) {
+  .title-menu_function {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+}
+
+.title-menu_item {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.style-title {
+  padding-top: 20px;
+  padding-left: 24px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: #212121;
+  letter-spacing: 0.06em;
+}
+
+.text-item {
+  padding-left: 24px;
+  padding-bottom: 20px;
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.87;
+  color: #757575;
+  letter-spacing: 0.03em;
 }
 /*# sourceMappingURL=main.css.map */
