--- a/sass/components/mobile/_backdrop.scss
+++ b/sass/components/mobile/_backdrop.scss
@@ -5,41 +5,63 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    padding-top: 60px;
+    padding-bottom: 54px;
+    padding-left: 15px;
+    padding-right: 15px;
+    overflow-y: scroll;
+
+    @media screen and (min-width:768px){
+
+      padding-top: 208px;
+      padding-bottom: 207px;
+      padding-left: 159px;
+      padding-right: 159px;
+    }
     
 }
-    
-       .is-hidden  {
+    .is-hidden  {
         opacity: 0;
         pointer-events: none;
     }
   
     
     .backdrop.is-hidden .modal {
-      transform: translate(-50%, -50%) scale(0.5);
+      transform:  scale(0.5);
       opacity: 0;
+      @media screen and (min-width:1200px){
+        transform: translate(-50%, -50%) scale(0.5);
+      }
     }
     .modal {
-        display: flex;
-        flex-direction: row-reverse;
-        
-        position: absolute;
-      
-        top: 50%;
-        left: 50%;
-      
-        transform: translate(-50%, -50%) scale(1);
+     
+      display: flex;
+        flex-direction: row-reverse; 
+        padding: 40px;
+        background: #ffffff;
+
+        transform:  scale(1);
         opacity: 1;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      
         background: #ffffff;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
           0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
 
+        @media screen and (min-width:480px) and (max-width:1199px){
+          position: relative;
+        }
+        @media screen and (min-width:1200px){
+          position: absolute;
+          transform: translate(-50%, -50%) scale(1);
+          min-width: 528px;
+          min-height: 581px;
+          top: 50%;
+          left: 50%;
+        }
 
-        
-    
-        .close {
+      
+      .close {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -51,6 +73,9 @@
             background: #ffffff;
             border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 50%;
+            position: absolute;
+            top: 0;
+            right: 0;
 
             .close-icon{
   
@@ -66,21 +91,25 @@
           }
 
           .form {
-            padding-top: 40px;
-            padding-bottom: 40px;
-            width: 448px;
+            
+            width: 100%;
+            
 
             .form-title{
                 font-family: Roboto;
               font-style: normal;
               font-weight: bold;
               font-size: 20px;
-              line-height: 1.15;
+              line-height: 1.5;
               text-align: center;
               letter-spacing: 0.03em;
               margin: 0;
               margin-bottom: 12px;
               color: $title-color;
+
+              @media screen and (min-width:1200px){
+                line-height: 1.15;
+              }
               
               }
 
@@ -147,12 +176,15 @@
                     font-family: Roboto;
                     font-style: normal;
                     font-weight: normal;
+                    font-size: 12px;
+                    line-height: 1.16;
+                    letter-spacing: 0.03em;
+                    color: $main-text-color;
+
+                  @media screen and (min-width:1200px){
                     font-size: 14px;
                     line-height: 1.71;
-                  
-                    letter-spacing: 0.03em;
-                  
-                    color: $main-text-color;
+                  }
 
                     .checkbox {
                         appearance: none;
