--- a/css/main.css
+++ b/css/main.css
@@ -1635,10 +1635,6 @@ textarea {
 }
 
 .title-menu_function {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 77px;
-  padding-bottom: 77px;
   background-color: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1646,20 +1642,6 @@ textarea {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (max-width: 767) {
-  .title-menu_function {
-    padding-top: 77px;
-    padding-bottom: 77px;
-  }
-}
-
-@media screen and (min-width: 768) {
-  .title-menu_function {
-    padding-top: 49px;
-    padding-bottom: 49px;
-  }
 }
 
 .title-menu_item {
@@ -1670,7 +1652,23 @@ textarea {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
+  padding-left: 24px;
+  padding-right: 24px;
   color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .title-menu_item {
+    padding-top: 82px;
+    padding-bottom: 77px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .title-menu_item {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
 }
 
 .style-title {
