--- a/sass/components/mobile/_portfolio-projeckt.scss
+++ b/sass/components/mobile/_portfolio-projeckt.scss
@@ -60,26 +60,14 @@
 
 .title-menu_function {
   
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 77px;
-  padding-bottom: 77px;
+  
 
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (max-width:767){
-    padding-top: 77px;
-    padding-bottom: 77px;
-     
-  }
-
-  @media screen and (min-width:768){
-    padding-top: 49px;
-    padding-bottom: 49px;
-  }
+  
 }
 
 .title-menu_item {
@@ -92,7 +80,22 @@
 
   letter-spacing: 0.03em;
 
+  padding-left: 24px;
+  padding-right: 24px;
+  
+
   color: #ffffff;
+
+  @media screen and (max-width:767px){
+    padding-top: 82px;
+    padding-bottom: 77px;
+     
+  }
+
+  @media screen and (min-width:768px){
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
 }
 
 .style-title {
