--- a/css/main.css
+++ b/css/main.css
@@ -1582,16 +1582,6 @@ textarea {
   }
 }
 
-.style-chyld {
-  margin: 15px;
-}
-
-@media screen and (min-width: 768px) {
-  .style-chyld {
-    width: calc(50% - 30px);
-  }
-}
-
 .portfolio-style {
   padding: 0;
   margin: -15px;
@@ -1605,6 +1595,7 @@ textarea {
 
 .style-chyld {
   position: relative;
+  margin: 15px;
   border: 1px solid #eeeeee;
 }
 
@@ -1619,6 +1610,18 @@ textarea {
 .style-chyld:hover .title-menu_function {
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+
+@media screen and (min-width: 768px) {
+  .style-chyld {
+    width: calc(50% - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .style-chyld {
+    width: calc((100% - 30px * 3) / 3);
+  }
 }
 
 .title-menu {
