--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -26,7 +26,7 @@
             }
 
             .title-menu {
-              width: 100%;
+              width: 354px;
               height: 294px;
               position: absolute;
               overflow: hidden;
