--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ textarea {
   display: flex;
 }
 
-.footer-form_container .footer-button, .modal .form .service {
+.footer-button, .modal .form .service {
   font-family: Roboto;
   font-weight: bold;
   color: white;
@@ -56,6 +56,7 @@ textarea {
 }
 
 .container {
+  width: 320px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -108,6 +109,7 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   background-color: #ffffff;
+  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
@@ -447,6 +449,7 @@ textarea {
 }
 
 .main-hero {
+  min-width: 320px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -499,7 +502,7 @@ textarea {
 }
 
 .main-hero .hero-item {
-  width: 360px;
+  width: 320px;
   text-align: center;
 }
 
@@ -554,7 +557,6 @@ textarea {
 @media screen and (min-width: 1200px) {
   .about-us {
     padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 
@@ -706,6 +708,7 @@ textarea {
 }
 
 .comand {
+  min-width: 320px;
   padding-top: 94px;
   padding-bottom: 94px;
   margin-left: auto;
@@ -760,7 +763,6 @@ textarea {
 }
 
 .comand .team .photo {
-  height: 622px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -777,7 +779,6 @@ textarea {
   .comand .team .photo {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
-    height: 536px;
     margin: 15px;
   }
 }
@@ -844,6 +845,7 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-bottom: 24px;
   width: 206px;
   margin-top: 16px;
 }
@@ -891,6 +893,19 @@ textarea {
 
 .client .client-container .client-container_item {
   margin: 15px;
+  width: calc(50% - 30px);
+}
+
+@media screen and (min-width: 768px) {
+  .client .client-container .client-container_item {
+    width: calc((100% - 30px * 3) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client .client-container .client-container_item {
+    width: calc((100% - 30px * 6) / 6);
+  }
 }
 
 .client .client-container .client-container_item .client-link {
@@ -903,7 +918,7 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 210px;
+  width: 100%;
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -913,18 +928,6 @@ textarea {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 768px) {
-  .client .client-container .client-container_item .client-link {
-    width: 226px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .client .client-container .client-container_item .client-link {
-    width: 170px;
-  }
 }
 
 .client .client-container .client-container_item .client-link .client-svg {
@@ -1138,32 +1141,38 @@ textarea {
   margin-left: 4px;
 }
 
-@media screen and (max-width: 1199px) {
+.footer-form_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-form_container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    width: 450px;
+    width: 570px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-form_container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer-form_container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     width: 570px;
   }
 }
 
-.footer-form_container .footer-form {
+.footer-form {
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -1176,12 +1185,14 @@ textarea {
 }
 
 @media screen and (max-width: 1199px) {
-  .footer-form_container .footer-form {
+  .footer-form {
     text-align: center;
   }
 }
 
-.footer-form_container .footer-input {
+.footer-input {
+  width: 100%;
+  margin-bottom: 20px;
   padding: 13px 16px;
   color: #fff;
   background-color: #2F303A;
@@ -1196,20 +1207,20 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 1199px) {
-  .footer-form_container .footer-input {
+@media screen and (min-width: 480px) {
+  .footer-input {
     width: 450px;
     margin-bottom: 20px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-form_container .footer-input {
+  .footer-input {
     width: 358px;
   }
 }
 
-.footer-form_container .footer-button {
+.footer-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1220,12 +1231,12 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-form_container .footer-button {
+  .footer-button {
     margin-left: 10px;
   }
 }
 
-.footer-form_container .footer-button .form-button_icon {
+.footer-button .form-button_icon {
   content: "";
   width: 24px;
   height: 24px;
@@ -1241,11 +1252,12 @@ textarea {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  padding-top: 60px;
-  padding-bottom: 54px;
+  padding-top: 93px;
+  padding-bottom: 94px;
   padding-left: 15px;
   padding-right: 15px;
   overflow-y: scroll;
+  z-index: 2;
 }
 
 @media screen and (min-width: 768px) {
@@ -1285,6 +1297,7 @@ textarea {
           flex-direction: row-reverse;
   padding: 40px;
   background: #ffffff;
+  width: 100%;
   -webkit-transform: scale(1);
           transform: scale(1);
   opacity: 1;
@@ -1309,8 +1322,8 @@ textarea {
     position: absolute;
     -webkit-transform: translate(-50%, -50%) scale(1);
             transform: translate(-50%, -50%) scale(1);
-    min-width: 528px;
-    min-height: 581px;
+    width: 528px;
+    height: 581px;
     top: 50%;
     left: 50%;
   }
@@ -1509,7 +1522,6 @@ textarea {
 
 @media screen and (max-width: 767px) {
   .button-container {
-    width: 480px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 60px;
@@ -1618,8 +1630,6 @@ textarea {
 }
 
 .title-menu_function {
-  padding-left: 24px;
-  padding-right: 24px;
   background-color: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1629,10 +1639,18 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
+  .title-menu_function {
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .title-menu_function {
     padding-top: 82px;
     padding-bottom: 77px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
@@ -1640,6 +1658,8 @@ textarea {
   .title-menu_function {
     padding-top: 52px;
     padding-bottom: 52px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
@@ -1647,6 +1667,8 @@ textarea {
   .title-menu_function {
     padding-top: 66px;
     padding-bottom: 65px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
