--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,10 +1,13 @@
 
     .container {
-
+      width: 320px;
       padding-left: 15px;
       padding-right: 15px;
       margin-right: auto;
       margin-left: auto;
+
+      
+     
   
       @media screen and (min-width: 480px) {
       width: 480px;
