--- a/sass/components/mobile/_backdrop.scss
+++ b/sass/components/mobile/_backdrop.scss
@@ -5,21 +5,24 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    padding-top: 60px;
-    padding-bottom: 54px;
+    padding-top: 93px;
+    padding-bottom: 94px;
     padding-left: 15px;
     padding-right: 15px;
     overflow-y: scroll;
+    z-index: 2;
 
     @media screen and (min-width:768px){
-
       padding-top: 208px;
       padding-bottom: 207px;
       padding-left: 159px;
       padding-right: 159px;
     }
+
     
+
 }
+    
     .is-hidden  {
         opacity: 0;
         pointer-events: none;
@@ -35,10 +38,12 @@
     }
     .modal {
      
-      display: flex;
+        display: flex;
         flex-direction: row-reverse; 
         padding: 40px;
         background: #ffffff;
+        width: 100%;
+        
 
         transform:  scale(1);
         opacity: 1;
@@ -54,8 +59,8 @@
         @media screen and (min-width:1200px){
           position: absolute;
           transform: translate(-50%, -50%) scale(1);
-          min-width: 528px;
-          min-height: 581px;
+          width: 528px;
+          height: 581px;
           top: 50%;
           left: 50%;
         }
