--- a/sass/components/mobile/_comand.scss
+++ b/sass/components/mobile/_comand.scss
@@ -1,4 +1,5 @@
 .comand {
+  min-width: 320px;
     padding-top: 94px;
     padding-bottom: 94px;
     margin-left: auto;
@@ -44,9 +45,7 @@
 
       .photo {
 
-        height: 622px;
-        
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
           0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         background: #ffffff;
@@ -61,7 +60,6 @@
           @media screen and (min-width:768px) and (max-width:1199px){
             
             flex-basis:calc(50% - 30px);
-            height: 536px;
             margin: 15px;
           }
 
@@ -115,8 +113,8 @@
           margin-left: auto;
           margin-right: auto;
           display: flex;
+          padding-bottom: 24px;
           width: 206px;
-        
           margin-top: 16px;
         }
 
