--- a/sass/components/mobile/_footer-form.scss
+++ b/sass/components/mobile/_footer-form.scss
@@ -1,19 +1,29 @@
 .footer-form_container{
-  
-    @media screen and (max-width:1199px){
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 450px;
-  }
+  display: flex;
+  flex-wrap: wrap;
 
-  @media screen and (min-width:1200px){
-    display: flex;
-    flex-wrap: wrap;
+  @media screen and (min-width:768px) and (max-width:1199px){
+    
+    justify-content: center;
+    
     width: 570px;
   }
 
-   .footer-form {
+  
+    @media screen and (max-width:1199px){
+     
+      justify-content: center;
+      
+    }
+    @media screen and (min-width:1200px){
+      
+      
+      width: 570px;
+    }
+    
+  }
+
+  .footer-form {
     
     font-family: Roboto;
     font-style: normal;
@@ -33,8 +43,8 @@
       }
 
       .footer-input {
-        
-        
+        width: 100%;
+        margin-bottom: 20px ;
         padding: 13px 16px;
         color:#fff;
         background-color: #2F303A;
@@ -45,7 +55,7 @@
         border-radius: 4px;
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
           
-        @media screen and (max-width:1199px){
+        @media screen and (min-width:480px){
           width: 450px;
           margin-bottom: 20px ;
         }
@@ -80,6 +90,6 @@
         } 
         
 
-}
+      
 
 
