--- a/sass/components/mobile/_portfolio-projeckt.scss
+++ b/sass/components/mobile/_portfolio-projeckt.scss
@@ -20,12 +20,12 @@
 }
 
 .style-chyld {
+  
   position: relative;
   margin: 14px;
   border: 1px solid #eeeeee;
-  
-  
-  &:hover {
+
+   &:hover {
     border: 1px solid #eeeeee;
     box-sizing: border-box;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -36,12 +36,7 @@
     transform: translateY(0);
   }
 
- 
-
-}
-
-
-
+ }
 
 .title-menu {
   position: absolute;
@@ -52,28 +47,34 @@
 
 .title-menu_function {
   
-  padding-left: 24px;
-  padding-right: 24px;
-
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (max-width:767px){
+  @media screen and (min-width:320px){
+    padding: 10px;
+  }
+
+  @media screen and (min-width:480px) and (max-width:767px){
     padding-top: 82px;
     padding-bottom: 77px;
-     
+    padding-left: 24px;
+    padding-right: 24px;
   }
 
   @media screen and (min-width:768px){
     padding-top: 52px;
     padding-bottom: 52px;
+    padding-left: 24px;
+  padding-right: 24px;
   }
 
   @media screen and (min-width:1200px){
     padding-top: 66px;
     padding-bottom: 65px;
+    padding-left: 24px;
+   padding-right: 24px;
   }
 
   
@@ -98,7 +99,7 @@
 }
 
 .style-title {
-              
+             
   padding-top: 20px;
   padding-left: 24px;
   font-family: Roboto;
