--- a/sass/components/mobile/_regular-customers.scss
+++ b/sass/components/mobile/_regular-customers.scss
@@ -25,13 +25,27 @@
 
         .client-container_item{
           margin: 15px;
+          width: calc(50% - 30px);
+
+          @media screen and (min-width:768px){
+              
+            width: calc((100% - 30px * 3) / 3);
+              
+          }
+
+          @media screen and (min-width:1200px){
+              
+            width: calc((100% - 30px * 6) / 6);
+              
+          }
+          
 
           .client-link {
             display: inline-flex;
             justify-content: center;
             align-items: center;
             
-            width: 210px;
+            width: 100%;
             height: 90px;
             border: 1px solid #afb1b8;
             border-radius: 4px;
@@ -39,13 +53,10 @@
             transition-duration: 250ms;
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-            @media screen and (min-width:768px){
-              width: 226px;
-            }
 
-            @media screen and (min-width:1200px){
-              width: 170px;
-            }
+           
+
+           
 
             .client-svg {
               fill: #afb1b8;
