--- a/sass/components/mobile/_backdrop.scss
+++ b/sass/components/mobile/_backdrop.scss
@@ -19,35 +19,31 @@
       padding-right: 159px;
     }
 
-    
-
-}
+  }
     
     .is-hidden  {
-        opacity: 0;
+      opacity: 0;
         pointer-events: none;
     }
   
     
     .backdrop.is-hidden .modal {
       transform:  scale(0.5);
-      opacity: 0;
+     
+
       @media screen and (min-width:1200px){
         transform: translate(-50%, -50%) scale(0.5);
       }
     }
-    .modal {
-     
-        display: flex;
-        flex-direction: row-reverse; 
-        padding: 40px;
-        background: #ffffff;
-        width: 100%;
-        
 
+    .modal {
+
+        padding: 40px 10px 40px 10px;
+        
         transform:  scale(1);
-        opacity: 1;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        opacity: 1;
+
         background: #ffffff;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
           0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -55,9 +51,12 @@
 
         @media screen and (min-width:480px) and (max-width:1199px){
           position: relative;
+          padding: 40px;
         }
+
         @media screen and (min-width:1200px){
           position: absolute;
+          padding: 40px;
           transform: translate(-50%, -50%) scale(1);
           width: 528px;
           height: 581px;
@@ -83,7 +82,7 @@
             right: 0;
 
             .close-icon{
-  
+                
                 transition-duration: 250ms;
                 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
