--- a/sass/components/mobile/_comand.scss
+++ b/sass/components/mobile/_comand.scss
@@ -116,6 +116,11 @@
           padding-bottom: 24px;
           width: 206px;
           margin-top: 16px;
+
+          @media screen and (min-width:1200px){
+            
+            padding-bottom: 30px;
+          }
         }
 
         .icon-about_as {
