--- a/sass/components/Front-page/_auth-nav.scss
+++ b/sass/components/Front-page/_auth-nav.scss
@@ -21,7 +21,7 @@
       
     }
 
-    .child + .child{
+    &__item + &__item{
 
      margin-top: 16px;
 
@@ -38,7 +38,7 @@
      }
    }
 
-    .link{
+    &__link{
 
       display: flex;
       align-items: center;
@@ -70,7 +70,7 @@
         line-height: 1.14;
     }
 
-      .icon-nav {
+    .auth-nav__link-icon {
         
         margin-right: 10px;
         fill: $main-text-color;
@@ -83,13 +83,16 @@
       &:hover,
       &:focus,
       &:active {
+
       color:$hover-color ;
-}
+
+  } 
 
       &:hover .icon-nav,
       &:focus .icon-nav {
+
       fill: $hover-color;
-}
 
     }
+   }
   }
