--- a/css/main.css
+++ b/css/main.css
@@ -1899,7 +1899,10 @@ textarea {
 
 @media screen and (min-width: 320px) {
   .title-menu_function {
-    padding: 10px;
+    padding-top: 22px;
+    padding-bottom: 22px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
@@ -1926,10 +1929,16 @@ textarea {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.55;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+@media screen and (min-width: 480px) {
+  .title-menu_item {
+    font-size: 18px;
+  }
 }
 
 .style-title {
