--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -54,7 +54,10 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width:320px){
-    padding: 10px;
+    padding-top: 22px;
+    padding-bottom: 22px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 
   @media screen and (min-width:480px) and (max-width:767px){
@@ -80,17 +83,15 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.55;
 
   letter-spacing: 0.03em;
+   color: #ffffff;
 
- 
-  
-
-  color: #ffffff;
-
-  
+  @media screen and (min-width:480px){
+    font-size: 18px;
+  }
 }
 
 .style-title {
