--- a/sass/components/Front-page/_auth-nav.scss
+++ b/sass/components/Front-page/_auth-nav.scss
@@ -39,7 +39,7 @@
    }
 
     &__link{
-
+      @extend %link-stile-none;
       display: flex;
       align-items: center;
       font-family: Roboto;
