--- a/sass/components/Front-page/_logo-header.scss
+++ b/sass/components/Front-page/_logo-header.scss
@@ -6,7 +6,6 @@
   color: $hover-color;
   font-weight: bold;
   font-style: normal;
-  
   letter-spacing: 0.03em;
 
   @media screen and (max-width:767px){
@@ -30,7 +29,7 @@
     line-height: 1.19;  
 }
 
-.logo__studio--black{
+.page-header__logo--black{
     color: #000000;
 }
 
