--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,7 @@ summary {
   display: list-item;
 }
 
-.main-container .portfolio-link, .main-container .link-nav, .main-container .auth-nav .link, .site-nav .link, .logo, .footer-adres_container .adres-link {
+.main-container .portfolio-link, .main-container .link-nav, .main-container .auth-nav .link, .site-nav .link, .logo, .auth-nav__link, .footer-adres_container .adres-link {
   text-decoration: none;
 }
 
@@ -370,7 +370,7 @@ textarea {
 }
 
 @media screen and (min-width: 768px) {
-  .main-nav .icon-mobile {
+  .main-nav .menu-button__icon {
     display: none;
   }
 }
@@ -427,15 +427,15 @@ textarea {
   outline: 0;
 }
 
-.menu-button .icon-cross {
+.menu-button .menu-button__icon--cross {
   display: none;
 }
 
-.menu-button.is-open .icon-cross {
+.menu-button.is-open .menu-button__icon--cross {
   display: block;
 }
 
-.menu-button.is-open .icon-menu {
+.menu-button.is-open .menu-button__icon--menu {
   display: none;
 }
 
@@ -472,19 +472,19 @@ textarea {
 }
 
 @media screen and (max-width: 767px) {
-  .site-nav__link {
+  .site-nav__link--active {
     padding-bottom: 8px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .site-nav__link {
+  .site-nav__link--active {
     padding-top: 32px;
     padding-bottom: 29px;
   }
 }
 
-.site-nav__link::after {
+.site-nav__link--active::after {
   display: block;
   position: absolute;
   content: "";
@@ -501,7 +501,7 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__link:hover::after, .site-nav__link:focus::after {
+.site-nav__link--active:hover::after, .site-nav__link--active:focus::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
 }
@@ -595,7 +595,7 @@ textarea {
   }
 }
 
-.logo .logo__studio--black {
+.logo .page-header__logo--black {
   color: #000000;
 }
 
