--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/normolize";
 @import "./util/placeholders";
 @import "./util/variables";
+@import "./util/mixin";
 @import "./base/main-container";
 @import "./base/container";
 @import "./components/page-header";
